--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
   <footer id="footer">
     <div class="footer_icons">
-      <a class="footer_around">
+      <a href="https://vk.com/malenkuy_roland" class="footer_around">
         <i class="fa-brands fa-facebook-f"></i>
       </a>
       <a class="footer_around">
