--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     </div>
 
     <div class="footer_icons footer-visibled">
-      <a class="footer_around">
+      <a href="https://vk.com/malenkuy_roland" class="footer_around">
         <i class="fa-brands fa-facebook-f"></i>
       </a>
       <a class="footer_around">
